--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,6 +12,8 @@
 </div>
 
 <table class="centeredTable">
+
+<!--  // Looping through the columns and getting the Table header value-->
   <tr>
     <th:block th:each="column : ${columns}">
       <th th:text = "${column.value}"></th>
@@ -20,7 +22,13 @@
   <tr>
     <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-    <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+<!--    //Enter list to link All jobs, set value equal to blank meaning everything-->
+    <td>
+      <ul>
+        <li> <a th:href="@{/list/jobs(column='all', value='')}">View All</a>
+      </li>
+      </ul>
+    </td> <!-- Feel free to remove or modify this element if necessary. -->
 
     <td th:each="category : ${tableChoices}">
       <ul>
