--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,7 +38,10 @@
 
   <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
+    <div>
+        <table th:replace="list-jobs:: job-tables">
+        </table>
 </div>
-
+</div>
 </body>
 </html>
