--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -25,14 +25,17 @@
 <!--    //Enter list to link All jobs, set value equal to blank meaning everything-->
     <td>
       <ul>
+<!--        set hyperlink to View all-->
         <li> <a th:href="@{/list/jobs(column='all', value='')}">View All</a>
       </li>
       </ul>
     </td> <!-- Feel free to remove or modify this element if necessary. -->
-
+<!--      repeat for each category in the table-->
     <td th:each="category : ${tableChoices}">
       <ul>
+<!--        repeat for each item in value-->
         <li th:each="item : ${category.value}">
+<!-- makes hyperlinks for the categories so we can filter and sort job listings in the table-->
           <a th:href="@{/list/jobs(column=${category.key},value=${item})}" th:text="${item}"></a>
         </li>
       </ul>
