--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,7 +37,7 @@
   <hr />
 
   <!-- TODO #4 - Loop over the search results to display all job fields. -->
-
+        //pull in the jobs-tables from list-jobs
     <div>
         <table th:replace="list-jobs:: job-tables">
         </table>
